--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead">
+            <button type="button" class="btn btn-success">Success</button>
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
