--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <script src="https://kit.fontawesome.com/cf7641e687.js" crossorigin="anonymous"></script>
     </head>
     <body id="page-top">
+        <!---Whatsapp Button-->
+
+        <a href="https://api.whatsapp.com/send?phone=50488915128&text=Hola!" class="btn-wsp" target="_blank">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
@@ -36,9 +43,9 @@
                 </div>
             </div>
         </nav>
+
         <!-- Masthead-->
         <header class="masthead">
-            <button type="button" class="btn btn-success">Success</button>
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
@@ -64,8 +71,8 @@
                     </div>
                 </div>
             </div>
-        </section>
-        
+        </section>    
+
         <!--Catalog
         <section class="page-section" id="catalogo">
             <div class="container px-4 px-lg-5">
@@ -84,7 +91,7 @@
                 <h2 class="text-center mt-0">Nuestro Catálogo</h2>
                 <hr class="divider" />
             </div>
-        <iframe class="row mx-auto" src="https://drive.google.com/file/d/1Q-bqqaRHOjMAXiiPYZHezR2xu3-waOHZ/preview" width="820px" height="470px" allow="autoplay"></iframe>       
+        <iframe class="row mx-auto" src="https://drive.google.com/file/d/1Q-bqqaRHOjMAXiiPYZHezR2xu3-waOHZ/preview" width="80%" height="470px" allow="autoplay"></iframe>       
         </section>   
 
         <!-- Catalog
@@ -266,9 +273,7 @@
                             <div class="d-none" id="submitSuccessMessage">
                                 <div class="text-center mb-3">
                                     <div class="fw-bolder">Form submission successful!</div>
-                                    To activate this form, sign up at
-                                    <br />
-                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+                                    <a href="#!">Enviado!</a>
                                 </div>
                             </div>
                             <!-- Submit error message-->
@@ -284,14 +289,14 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-4 text-center mb-5 mb-lg-0">
                         <i class="bi-phone fs-2 mb-3 text-muted"></i>
-                        <div>+1 (555) 123-4567</div>
+                        <div>+504 8891-5128</div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2021 - Company Name</div></div>
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2021 - Butterfly Promotionals</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
