--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Tenemos lo que necesita!</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
+                        <p class="text-white-75 mb-4">Desarrollamos tu marca, tu producto y tu arte para llevar a cabo promocionales de excelente calidad, diseño e imagen!</p>
                         <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
                     </div>
                 </div>
