--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Tenemos lo que necesita!</h2>
+                        <h2 class="text-white mt-0">Sobre Nosotros</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">Desarrollamos tu marca, tu producto y tu arte para llevar a cabo promocionales de excelente calidad, diseño e imagen!</p>
+                        <p class="text-white-75 mb-4">Somos una empresa con el sueño de ser el lider nacional en soluciones promocionales, destacandonos por calidad, diseño e imagen.<br>Somos limeños de corazón y queremos dar a conocer el servicio de nuestro querido lima a todo Honduras dando servicio a 18 departamentos del pais.</p>
                         <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
                     </div>
                 </div>
