--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <h2 class="text-white mt-0">Sobre Nosotros</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">Somos una empresa con el sueño de ser el lider nacional en soluciones promocionales, destacandonos por calidad, diseño e imagen.<br>Somos limeños de corazón y queremos dar a conocer el servicio de nuestro querido lima a todo Honduras dando servicio a los 18 departamentos del pais.</p>
-                        <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
+                        <a class="btn btn-light btn-xl" href="#services">Nuestros Servicios</a>
                     </div>
                 </div>
             </div>
