--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <iframe class="row mx-auto" src="https://drive.google.com/file/d/1Q-bqqaRHOjMAXiiPYZHezR2xu3-waOHZ/preview" width="80%" height="470px" allow="autoplay"></iframe>       
         </section>   
 
-        <!-- Catalog
+        <!-- Catalog----> 
         <section class="page-section" id="catalogo">
             <div class="container px-4 px-lg-5">
                 <h2 class="text-center mt-0">Nuestro Catálogo</h2>
@@ -106,14 +106,14 @@
                     document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
                         var adobeDCView = new AdobeDC.View({clientId: "<YOUR_CLIENT_ID>", divId: "adobe-dc-view"});
                         adobeDCView.previewFile({
-                            content:{location: {url: "./assets/catalogobutterfly.pdf"}},
+                            content:{location: {url: "https://emoran98.github.io/butterflypromotionals/assets/catalogobutterfly.pdf"}},
                             metaData:{fileName: "Catálogo 2021 - 2022"}
                         }, {embedMode: "SIZED_CONTAINER", dockPageControls: false, showDownloadPDF: false, 
                             showPrintPDF: false, showFullScreen: false});
                     });
                 </script>        
         </section>      
-        ----> 
+        
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container px-4 px-lg-5">
