--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
                 <script type="text/javascript">
                     document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
-                        var adobeDCView = new AdobeDC.View({clientId: "<YOUR_CLIENT_ID>", divId: "adobe-dc-view"});
+                        var adobeDCView = new AdobeDC.View({clientId: "73f2cc84816040d0b5807b12936f13f7", divId: "adobe-dc-view"});
                         adobeDCView.previewFile({
                             content:{location: {url: "https://emoran98.github.io/butterflypromotionals/assets/catalogobutterfly.pdf"}},
                             metaData:{fileName: "Catálogo 2021 - 2022"}
