--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a href="#page-top"><img src="assets/img/logo.png" width="75" alt="" class="d-inline-block align-middle mr-2"></a>
+                <a href="#page-top"><img src="assets/img/logo.png" width="70" alt="" class="d-inline-block align-middle mr-2"></a>
                 <a class="navbar-brand" href="#page-top">Butterfly Promotionals</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -84,6 +84,13 @@
                 </div>
             <iframe class="row mx-auto" src="https://drive.google.com/file/d/1Q-bqqaRHOjMAXiiPYZHezR2xu3-waOHZ/preview" width=70% height="480" allow="autoplay"></iframe>
         -->
+
+        <!--embebido-->
+        <iframe class="row mx-auto" src="https://catalogos.promocionalesenlinea.com/view/669118/" width="90%" height="85%" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+
+
+
+
 
         <!-- Catalog---->
         <section class="page-section" id="catalogo">
